overflow correct

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,6 +110,7 @@ body {
 .user-menu-wrapper {
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: 45px;
 }
 
@@ -203,7 +204,7 @@ body {
   display: flex;
   align-items: center;
   width: 231px;
-  margin-right: 27px;
+  margin-right: 26px;
   padding-left: 27px;
   text-decoration: none;
   color: #000000;
@@ -918,6 +919,7 @@ body {
 
 .property-list {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   max-width: 560px;
 }
@@ -1425,6 +1427,7 @@ body {
 
 /* Футер */
 .page-footer {
+  display: flex;
   flex-grow: 1;
   min-width: 1160px;
   background-color: #444444;
@@ -1432,6 +1435,7 @@ body {
 
 .footer-container {
   display: flex;
+  flex-grow: 1;
   max-width: 1160px;
   margin: 0 auto;
   padding: 62px 0 61px;
@@ -1496,7 +1500,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  margin-bottom: 56px;
+  margin-bottom: 51px;
   padding: 0;
   list-style-type: none;
 }
@@ -1549,6 +1553,7 @@ body {
 
 .footer-social-item {
   position: relative;
+  margin-top: 5px;
 }
 
 .footer-social-item:not(:last-child) {
@@ -2341,13 +2346,15 @@ body {
 
 .pagination-item-numbers {
   display: flex;
+  flex-wrap: wrap;
+  max-width: 300px;
 }
 
 .pagination-link-number {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
+  min-width: 40px;
   min-height: 40px;
 }
 
